--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,9 @@ author:
   avatar           : "profile.png"
   name             : "朱琦雯"
   pronouns         : # example: "she/her"  
-  location         : "Earth"
-  employer         : "Red Brick University"
-  uri              : # URL
-  email            : "none@example.org" 
+  location         : "浙江省宁波市"
+  employer         : "墨尔本大学"
+  email            : "zhuqw1214@163.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
@@ -46,31 +45,6 @@ author:
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
-  # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
-  facebook         : # Username
-  flickr           : # Username
-  foursquare       : # Username
-  goodreads        : # Username
-  google_plus      : # Username
-  keybase          : # Username
-  instagram        : # Username
-  lastfm           : # Username
-  linkedin         : # Username
-  mastodon         : # URL
-  medium           : # URL
-  pinterest        : # Username
-  soundcloud       : # Username
-  steam            : # Username
-  telegram         : # URL
-  tumblr           : # Username
-  twitter          : # Username for X / Twitter
-  vine             : # Username
-  weibo            : # Username
-  wikipedia        : # Username
-  xing             : # Username
-  youtube          : # Username
-  zhihu            : # URL
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
