--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,19 +5,19 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Publications"
+  - title: "短视频作品"
     url: /publications/
 
-  - title: "Talks"
+  - title: "中长视频作品"
     url: /talks/    
 
-  - title: "Teaching"
+  - title: "文字作品"
     url: /teaching/    
     
-  - title: "Portfolio"
+  - title: "h5作品"
     url: /portfolio/
         
-  - title: "Blog Posts"
+  - title: "摄影作品"
     url: /year-archive/
     
   - title: "CV"
